--- a/package.json
+++ b/package.json
@@ -2,28 +2,22 @@
   "name": "neuroglancer",
   "description": "Visualization tool for 3-D volumetric data.",
   "license": "Apache-2.0",
-  "version": "2.3 Multi user polygon drawing version",
+  "version": "0.0.0-beta.0",
   "main": "dist/module/main_module.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:BrainSharer/BrainsharerMonoRepo.git"
+    "url": "git+https://github.com/google/neuroglancer.git"
   },
   "engines": {
     "node": ">=12"
   },
   "scripts": {
-    "wsl-build-production": "cpy ./src/neuroglancer/services/production.ts ./src/neuroglancer/services/service.ts node && node ./config/esbuild-cli.js --config=min",
-    "wsl-server": "node ./config/esbuild-cli.js --config=dev --serve --watch",
-    "wsl-build-webdev": "node ./config/esbuild-cli.js --config=min",
     "generate-code": "node ./config/generate_code.js",
-    "build-demo": "./set_service.sh demo && node ./config/esbuild-cli.js --config=min",
-    "build-tobor": "./set_service.sh tobor && node ./config/esbuild-cli.js --config=min",
-    "build-min": "./set_service.sh production && node ./config/esbuild-cli.js --config=min",
-    "build-local": "./set_service.sh local && node ./config/esbuild-cli.js --config=min ",
-    "build": "./set_service.sh production && node ./config/esbuild-cli.js --config=min",
+    "build-min": "node ./config/esbuild-cli.js --config=min",
+    "build": "node ./config/esbuild-cli.js --config=min",
     "build:watch": "node ./config/esbuild-cli.js --config=dev --serve --watch",
-    "local-server": "./set_service.sh local && node ./config/esbuild-cli.js --config=dev --serve --watch --define NEUROGLANCER_BUILD_INFO=\"{'tag':'Local testing server'}\"",
-    "dev-server-python": "./set_service.sh local && node ./config/esbuild-cli.js --config=python-dev --serve --watch",
+    "dev-server": "node ./config/esbuild-cli.js --config=dev --serve --watch",
+    "dev-server-python": "node ./config/esbuild-cli.js --config=python-dev --serve --watch",
     "build-module": "node ./config/esbuild-cli.js --config=module",
     "build-python": "node ./config/esbuild-cli.js --config=python-min",
     "build-python-min": "node ./config/esbuild-cli.js --config=python-min",
@@ -33,66 +27,57 @@
     "benchmark": "karma start ./config/karma.benchmark.js --single-run",
     "benchmark:watch": "karma start ./config/karma.benchmark.js --no-single-run",
     "prepublishOnly": "npm run test && npm run build-module",
-    "gulp": "gulp",
-    "lint": "eslint . --ext .ts",
-    "typecheck": "tsc --noEmit",
-    "build-min-prod": "./set_service.sh production && node ./config/esbuild-cli.js --config=min",
-    "build-prod": "./set_service.sh production && node ./config/esbuild-cli.js --config=min",
-    "build-docs": "typedoc --options ./typedoc.json && cp docs/modules.html docs/index.html"
+    "lint:check": "biome lint .",
+    "lint:fix": "biome lint . --apply",
+    "format:check": "prettier --cache . -c",
+    "format:fix": "prettier --cache . -w",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@types/jasmine": "^3.7.7",
-    "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "@typescript-eslint/parser": "^4.27.0",
+    "@biomejs/biome": "1.4.1",
+    "@types/jasmine": "^4.3.1",
     "benchmark": "^2.1.4",
     "chokidar": "^3.5.1",
-    "clang-format": "^1.5.0",
     "colors": "^1.4.0",
     "connect": "^3.7.0",
-    "eslint": "^7.28.0",
     "event-stream": "^4.0.1",
     "faye-websocket": "^0.11.4",
-    "gulp": "^4.0.2",
-    "gulp-clang-format": "^1.0.27",
-    "jasmine-core": "^3.7.1",
+    "jasmine-core": "^4.5.0",
     "karma": "^6.3.4",
     "karma-benchmark": "^1.0.4",
     "karma-benchmark-reporter": "^0.1.1",
     "karma-chrome-launcher": "^3.1.0",
+    "karma-esbuild": "^2.3.0",
     "karma-firefox-launcher": "^2.1.1",
-    "karma-jasmine": "^4.0.1",
+    "karma-jasmine": "^5.1.0",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-sourcemap-loader": "^0.3.8",
+    "karma-sourcemap-loader": "^0.4.0",
     "morgan": "^1.10.0",
     "nunjucks": "^3.2.3",
-    "send": "^0.17.1",
+    "prettier": "3.1.1",
+    "send": "^0.18.0",
     "yargs": "^17.0.1"
   },
   "dependencies": {
-    "@types/codemirror": "5.60.0",
+    "@types/codemirror": "5.60.15",
     "@types/gl-matrix": "^2.4.5",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^15.12.2",
-    "@types/pako": "^1.0.4",
-    "@types/webpack-env": "^1.16.4",
-    "codemirror": "^5.65.3",
-    "compress-json": "^2.1.2",
-    "esbuild": "^0.12.8",
-    "firebase": "^9.8.1",
+    "@types/lodash": "^4.14.170",
+    "@types/node": "^18.14.6",
+    "@types/pako": "^2.0.0",
+    "@types/webpack-env": "^1.16.0",
+    "codemirror": "^5.61.1",
+    "esbuild": "^0.19.11",
+    "firebase": "^10.8.0",
     "gl-matrix": "3.1.0",
     "glsl-editor": "^1.0.0",
     "ikonate": "mikolajdobrucki/ikonate#a86b4107c6ec717e7877f880a930d1ccf0b59d89",
     "lodash": "^4.17.21",
     "nifti-reader-js": "^0.5.4",
-    "node": "^17.7.2",
-    "npm": "^8.10.0",
-    "numcodecs": "^0.1.1",
-    "pako": "^2.0.4",
+    "numcodecs": "^0.3.1",
+    "pako": "^2.0.3",
     "svg-inline-loader": "^0.8.2",
-    "typedoc": "^0.23.18",
-    "typedoc-plugin-missing-exports": "^1.0.0",
-    "typescript": "^4.6.4",
-    "typescript-cookie": "^1.0.5"
+    "typescript": "^5.3.3",
+    "typescript-cookie": "^1.0.6"
   },
   "overrides": {
     "karma-benchmark": {
