--- a/package.json
+++ b/package.json
@@ -75,12 +75,13 @@
   "dependencies": {
     "codemirror": "^5.61.1",
     "core-js": "^3.39.0",
+    "firebase": "^10.8.0",
     "gl-matrix": "3.1.0",
     "ikonate": "github:mikolajdobrucki/ikonate#a86b4107c6ec717e7877f880a930d1ccf0b59d89",
     "lodash-es": "^4.17.21",
+    "nano": "^10.1.4",
     "nifti-reader-js": "^0.6.8",
     "numcodecs": "^0.3.2",
-    "firebase": "^10.8.0",
     "typescript-cookie": "^1.0.6"
   },
   "overrides": {
