Got couch fully working, removed swap button and fixed bug in layer.ts. Still need to clean code

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ ngauth_server/secrets/
 src/brainshare/firestore.ts
 src/brainshare/docs/sphinx/_build/
 src/brainshare/docs/typedoc
+src/brainshare/couchdb_store.ts
