--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "gl-matrix": "3.1.0",
     "glsl-editor": "^1.0.0",
     "ikonate": "mikolajdobrucki/ikonate#a86b4107c6ec717e7877f880a930d1ccf0b59d89",
+    "JSONStream": "^1.3.5",
     "lodash": "^4.17.21",
     "mongodb": "6.13",
     "nifti-reader-js": "^0.5.4",
